k8s-manifests/prod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tier-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tier-app
  template:
    metadata:
      labels:
        app: tier-app
    spec:
      imagePullSecrets:
      - name: tier-app-reg-secret-prod
      containers:
      - name: tier-app
        image: iamridoydey/3-tier-app:prod-530042f07d88ed3f9ce3988d1617bf8c83cd6612
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
