k8s-manifests/prod/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tier-app-svc
spec:
  type: ClusterIP
  selector:
    app: tier-app
  ports:
    - port: 5000
      targetPort: 5000
