k8s-manifests/prod/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:402938031713:certificate/f449010f-f2bf-41a7-a991-729598d2fc94
spec:
  ingressClassName: alb
  rules:
    - host: nextgenops.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tier-app-svc
                port:
                  number: 5000
